--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.5",
     "multer": "^1.4.5-lts.1",
+    "node-cron": "^3.0.3",
     "nodemailer": "^6.10.0",
     "socket.io": "^4.8.1",
     "stripe": "^17.6.0",
@@ -47,6 +48,7 @@
     "@types/jsonwebtoken": "^9.0.8",
     "@types/multer": "^1.4.12",
     "@types/node": "^22.12.0",
+    "@types/node-cron": "^3.0.11",
     "@types/nodemailer": "^6.4.17",
     "ncp": "^2.0.0",
     "nodemon": "^3.1.9",
