--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -71,7 +71,7 @@ jobs:
           ssh $EC2_USER@$EC2_HOST "echo '$ENV_VARS_JSON' > ~/applications/backend/.env"
 
           # Stop the existing PM2 process if it exists
-          ssh $EC2_USER@$EC2_HOST "pm2 delete backend || true"  # Ensures no errors if the process doesn't exist
+          ssh $EC2_USER@$EC2_HOST "tmux has-session -t backend 2>/dev/null && tmux kill-session -t backend || true"
 
           # Start the backend application with PM2
-          ssh $EC2_USER@$EC2_HOST "cd ~/applications/backend && pm2 start dist/index.js --name backend --update-env --watch --force"
+          ssh $EC2_USER@$EC2_HOST "cd ~/applications/backend && tmux new-session -d -s backend 'node dist/index.js'"
